2008-05-12  Bastien Nocera  <hadess@hadess.net>

	* src/main.c (main): Add -v/--version to display the program's
	version (Closes: #524360)

2008-05-12  Bastien Nocera  <hadess@hadess.net>

	* data/phonemgr.glade: Infrared actually uses /dev/ircomm0, not
	/dev/ircomm as mentioned in the UI, patch from Daniele Forsi
	<dforsi@gmail.com> (Closes: #532342)

2008-05-12  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c (phonemgr_utils_address_is),
	(phonemgr_utils_write_config): Use the irda connection type when
	connecting to a phone via IrDA, so that the driver knows the
	connection init is different

	* libgsm/phonemgr-listener.c (phonemgr_listener_connect):
	Sleep for a second after disconnecting from IrDA devices because
	they suck

2008-04-11  Bastien Nocera  <hadess@hadess.net>

	* telepathy/main.c: Add an include for locale.h, spotted by
	Baptiste Mille-Mathias <bmm80@free.fr> (Closes: #527410)

============ Version 0.51

2008-03-21  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.51
	* libgsm/phonemgr-listener.c (phonemgr_listener_get_own_details):
	Abort straight away if we can't change to the ON address book
	folder
	* libgsm/glibgsmtest.c (send_message), (main):
	Send a message after a little timeout, to avoid behaving differently
	from gnome-phone-manager

2008-03-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c
	(phonemgr_listener_sms_notification_soft_poll):
	Spin less, fix some ms/microseconds confusion

2008-03-14  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c (phonemgr_utils_address_is):
	Fix utter stupidness checking whether an address is
	actually a device path

2008-03-13  Bastien Nocera  <hadess@hadess.net>

	* README: update build dependencies
	* configure.in:
	* src/ui.c (create_send_dialog): Add spell checking
	to the "Send message" text area, based on patch by
	Daniel Schierbeck <daniel.schierbeck@gmail.com>
	(Closes: #508816)

============ Version 0.50
