@@ -4,3 +4,4 @@ VOID:UINT,STRING,STRING
 VOID:INT,BOOLEAN
 VOID:UINT,UINT,BOOLEAN
 VOID:STRING,ULONG,INT
+VOID:INT,INT,INT,INT
